# Shinox

./: .gitmodules  README.md
.github/workflows/: deploy.yml
agent_registry/: README.md  main.py  pyproject.toml
agent_registry/templates/: index.html
agents/general_fast/: agent.py  brain.py  main.py  pyproject.toml  schemas.py
agents/philosopher/: README.md  agent.py  brain.py  main.py  pyproject.toml
agents/squad_lead/: assignment_store.py  brain.py  framework.py  main.py  pyproject.toml  schemas.py
agents/squad_lead/tests/: conftest.py  test_assignment_store.py  test_brain.py
agents/test_external/accounting_agent/: brain.py  main.py  pyproject.toml
agents/test_external/accounting_agent/legacy/: agent_executor.py  inspect_client.py  main.py  test_client1.py
agents/test_external/accounting_agent/local/: main.py  start.sh
agents/test_external/accounting_agent/remote/: a2a_server.py  agent.py  brain.py  pyproject.toml
agents/todo_list/: agent.py  brain.py  main.py  pyproject.toml
agents/todo_list/mcp_tool/client/: client.py
agents/todo_list/mcp_tool/server/: package.json
agents/todo_list/mcp_tool/server/src/: client.ts  dashboard.ts
api-gateway/: main.py  requirements.txt
director/: README.md  agents.yaml  main.py  pyproject.toml
docs/: MULTI_AGENT_COORDINATION_DESIGN.md
governance/: main.py  pyproject.toml
governance/tests/: conftest.py  test_governance.py
infra/: Dockerfile.accounting-agent  Dockerfile.agent-registry  Dockerfile.api-gateway  Dockerfile.dashboard  Dockerfile.director  Dockerfile.general-fast-agent  Dockerfile.governance  Dockerfile.kafka2db  Dockerfile.philosopher-agent  Dockerfile.squad-lead-agent  Dockerfile.todo-list-agent  compose.local.yaml  compose.prod.yaml  compose.yaml
infra/monitoring/: loki-config.yaml  prometheus.yaml  promtail-config.yaml
infra/monitoring/grafana/dashboards/: shinox-infrastructure.json  shinox-overview.json
infra/monitoring/grafana/provisioning/dashboards/: dashboards.yaml
infra/nginx/: init-letsencrypt.sh  nginx.conf
infra/schemas/: 001_init.sql  agent-message.json  governance-signal.json
kafka2db/: .env.example  Dockerfile  go.mod  go.sum  main.go
kafka2db/internal/config/: config.go
kafka2db/internal/consumer/: consumer.go
kafka2db/internal/db/: pool.go  repository.go
kafka2db/internal/models/: models.go
shinox-agent-sdk/shinox_agent/: base.py
