[project]
name = "agent-registry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.22",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.40.0",
    "jinja2>=3.1.5",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "python-json-logger>=3.0.0",
]
